[package]
name = "greeting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mymacro = { path = "./mymacro"}
mymacro_drive = { path = "./mymacro_drive"}
tokio = { version = "1.25.0", features = ["full"] }
futures = "0.3"
async-std = "1.12.0"

[profile.dev]
opt-level=3
