[package]
name = "mymacro_drive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
tokio = { version = "1.25.0", features = ["full"] }

[dependencies]
mymacro = {path = "../mymacro"}
syn = "*"
quote = "*"
futures = "0.3"
async-std = "1.12.0"